Report only once per cycle.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,10 @@
 # targets = upload
 
 [env:d1_mini]
-platform = espressif
+platform = espressif8266
 framework = arduino
 board = d1_mini
-lib_install = 64,54,89
+lib_deps =
+  ArduinoJson
+  DallasTemperature
+  PubSubClient
