--- a/platformio.ini
+++ b/platformio.ini
@@ -25,3 +25,4 @@ lib_deps =
   ArduinoJson
   DallasTemperature
   PubSubClient
+build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"'"
