We need a define to ensure we can send packets out from this node.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,4 +25,4 @@ lib_deps =
   ArduinoJson
   DallasTemperature
   PubSubClient
-build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"'"
+build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"' -DMQTT_MAX_PACKET_SIZE=1024"
