--- a/platformio.ini
+++ b/platformio.ini
@@ -17,12 +17,11 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:d1_mini]
+[env:nodemcuv2]
 platform = espressif8266
 framework = arduino
-board = d1_mini
+board = nodemcuv2
 lib_deps =
-  ArduinoJson
   DallasTemperature
-  PubSubClient
-build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"' -DMQTT_MAX_PACKET_SIZE=1024"
+  https://github.com/jasiek/metering
+build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"' -DMQTT_MAX_PACKET_SIZE=1024 -Wl,-Tesp8266.flash.1m64.ld -DMQTT_BUFFER_SIZE=1024"
