--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,8 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 lib_deps =
+  MQTT
+  ArduinoJson
   DallasTemperature
   https://github.com/jasiek/metering
 build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"' -DMQTT_MAX_PACKET_SIZE=1024 -Wl,-Tesp8266.flash.1m64.ld -DMQTT_BUFFER_SIZE=1024"
