Updated source to work with the latest version of metering.

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,13 +17,22 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:nodemcuv2]
+[common_env_data]
+
+lib_deps =
+  ArduinoJson
+  DallasTemperature
+  https://github.com/jasiek/metering.git#master
+build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"' -Wl,-Tesp8266.flash.1m64.ld -DMQTT_BUFFER_SIZE=1024"
+
+[env:ec11]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-lib_deps =
-  MQTT
-  ArduinoJson
-  DallasTemperature
-  https://github.com/jasiek/metering#master
-build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"' -DMQTT_MAX_PACKET_SIZE=1024 -Wl,-Tesp8266.flash.1m64.ld -DMQTT_BUFFER_SIZE=1024"
+build_flags = ${common_env_data.build_flags} -DMETER_PULSE_WIDTH=80
+
+[env:og23]
+platform = espressif8266
+framework = arduino
+board = nodemcuv2
+build_flags = ${common_env_data.build_flags} -DMETER_PULSE_WIDTH=35
