--- a/platformio.ini
+++ b/platformio.ini
@@ -20,22 +20,18 @@
 [common_env_data]
 build_flags = !echo "-DLOGGING=1 -DGIT_REVISION='\"$(git rev-parse HEAD)\"' -Wl,-Tesp8266.flash.1m64.ld -DMQTT_BUFFER_SIZE=1024"
 
-[env:ec11]
+[env:nodemcuv2]
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
 lib_deps =
-  ArduinoJson
+  MQTT@2.3.2
   DallasTemperature
-  https://github.com/jasiek/metering.git#v0.2.1
-build_flags = ${common_env_data.build_flags} -DMETER_PULSE_WIDTH=80
+  ArduinoJson@5.13.2
+  https://github.com/jasiek/metering.git#v2.0.1
+build_flags = ${common_env_data.build_flags}
+upload_port = /dev/cu.wchusbserial1410
+monitor_port = /dev/cu.wchusbserial1410
+monitor_speed = 115200
 
-[env:og23]
-platform = espressif8266
-framework = arduino
-board = nodemcuv2
-lib_deps =
-  ArduinoJson
-  DallasTemperature
-  https://github.com/jasiek/metering.git#v0.2.1
-build_flags = ${common_env_data.build_flags} -DMETER_PULSE_WIDTH=35
+
